--- a/NowSaleAndroidApp/app/src/main/res/layout/slider_market_img.xml
+++ b/NowSaleAndroidApp/app/src/main/res/layout/slider_market_img.xml
@@ -7,22 +7,44 @@
     >
 
 
-    <FrameLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        ​<ImageView
+        <ImageView
             android:layout_width="match_parent"
             android:layout_height="280dp"
             android:id="@+id/imageView"
             android:scaleType="fitXY"
         />
         <ImageView
-
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:background="@drawable/black_grd"
             />
-    </FrameLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/whiteColor"
+            android:textSize="13sp"
+            android:layout_above="@id/marketName"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/marketIntroduce"
+            android:text="너무나도 맛있는 곱창!!"
+            android:layout_marginBottom="3dp"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="신촌황소곱창"
+            android:textColor="@color/whiteColor"
+            android:textSize="20sp"
+            android:layout_marginBottom="43dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:textStyle="bold"
+            android:id="@+id/marketName"
+            />
+    </RelativeLayout>
 
 
 </LinearLayout>
