--- a/NowSaleAndroidApp/app/src/main/res/menu/activity_main_drawer.xml
+++ b/NowSaleAndroidApp/app/src/main/res/menu/activity_main_drawer.xml
@@ -18,8 +18,9 @@
         <item
             android:id="@+id/nav_change_info"
             android:title="개인정보수정" />
+
         <item
-            android:id="@+id/nav_help"
+            android:id="@+id/nav_nothing"
             android:title="고객센터" />
 
         <item android:title="점주용 메뉴"
@@ -28,26 +29,28 @@
 
         <item
             android:id="@+id/nav_owner_registerd"
-            android:title=" - 내가 등록한 쿠폰 및 행사"
+            android:title="내가 등록한 쿠폰 및 행사"
             android:visible="false"
             />
         <item
             android:id="@+id/nav_owner_register_coupon"
-            android:title=" - 쿠폰등록"
+            android:title="쿠폰등록"
             android:visible="false"/>
         <item
             android:id="@+id/nav_owner_register_discount"
-            android:title=" - 할인행사 등록"
+            android:title="할인행사 등록"
             android:visible="false"/>
         <item
             android:id="@+id/nav_owner_frequenter"
-            android:title=" - 단골손님 관리"
+            android:title="단골손님 관리"
             android:visible="false"/>
         <item
             android:id="@+id/nav_owner_change_info"
-            android:title=" - 매장정보 수정"
+            android:title="매장정보 수정"
             android:visible="false"/>
-
+        <item
+            android:id="@+id/nav_help"
+            android:title="고객센터" />
 
     </group>
 
