로딩이미지, 개인정보처리방침 등 여러 오류 수정

--- a/NowSaleAndroidApp/app/src/main/res/layout/activity_owner_register_coupon2.xml
+++ b/NowSaleAndroidApp/app/src/main/res/layout/activity_owner_register_coupon2.xml
@@ -118,7 +118,8 @@
                                     android:singleLine="true"
                                     android:textColor="@color/baseColor"
                                     android:textSize="18sp"
-                                    android:theme="@style/EditTheme" />
+                                    android:theme="@style/EditTheme"
+                                    android:maxLength="16"/>
                             </LinearLayout>
 
                             <LinearLayout
@@ -154,7 +155,8 @@
                                     android:singleLine="true"
                                     android:textColor="@color/baseColor"
                                     android:textSize="18sp"
-                                    android:theme="@style/EditTheme" />
+                                    android:theme="@style/EditTheme"
+                                    android:maxLength="12"/>
                             </LinearLayout>
 
                             <TextView
