--- a/NowSaleAndroidApp/app/src/main/res/drawable/frame_loading.xml
+++ b/NowSaleAndroidApp/app/src/main/res/drawable/frame_loading.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <animation-list xmlns:android="http://schemas.android.com/apk/res/android"
                 android:oneshot="false">
-    <item android:drawable="@drawable/harincoupon_left" android:duration="350"/>
-    <item android:drawable="@drawable/harincoupon_right" android:duration="350"/>
-    <item android:drawable="@drawable/harinsale_left" android:duration="350"/>
-    <item android:drawable="@drawable/harinsale_right" android:duration="350"/>
+    <item android:drawable="@drawable/harin_left" android:duration="350"/>
+    <item android:drawable="@drawable/harin_right" android:duration="350"/>
+
 </animation-list>
