이미지 null일 경우 로고 이미지 넣기

--- a/NowSaleAndroidApp/app/src/main/res/layout/activity_client_coupon_category.xml
+++ b/NowSaleAndroidApp/app/src/main/res/layout/activity_client_coupon_category.xml
@@ -246,13 +246,15 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp">
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginBottom="15dp">
                 <TextView
+                    android:textSize="13sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:lineSpacingExtra="3dp"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
+                    android:lineSpacingExtra="1dp"
                     android:text="@string/coupon_category_bottom"/>
             </LinearLayout>
         </LinearLayout>
