--- a/NowSaleAndroidApp/app/src/main/res/layout/list_row_coupon_wallet.xml
+++ b/NowSaleAndroidApp/app/src/main/res/layout/list_row_coupon_wallet.xml
@@ -21,6 +21,7 @@
             android:layout_height="match_parent">
             <ImageView
                 android:id="@+id/logo_img"
+                android:src="@drawable/app_logo"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:textColor="#000000"
