오너 메뉴 이미지 파일 업로드 생성

--- a/Spring boot/src/main/resources/templates/ownerMarketImg.html
+++ b/Spring boot/src/main/resources/templates/ownerMarketImg.html
@@ -30,7 +30,7 @@
 					alarm_SMS : $("#alarm_SMS").val()
 				}
 				$.ajax({
-					url: '/owner/signUp', // url where to submit the request
+					url: '/all/api/upload/multi', // url where to submit the request
 					contentType : "application/json",
 					type : "POST", // type of action POST || GET
 					dataType : 'json', // data type
