점주 마켓 이미지등록

--- a/Spring boot/src/main/resources/templates/ownerMenuImg.html
+++ b/Spring boot/src/main/resources/templates/ownerMenuImg.html
@@ -23,9 +23,8 @@
 					type : "POST", // type of action POST || GET
 					data : data,
 					timeout: 10000,
-
 					success : function(data) {
-						$('#pw').text(data);
+						alert("이미지 삽입 완료");
 					}
 				})
 			});
